<resources>
    <string name="app_name">FloatingSubtitle</string>
    <string name="action_connect">Connect</string>
    <string name="action_disconnect">Stop</string>
    <string name="action_settings">Settings &amp; About</string>
    <string name="action_set_filter">Filter</string>
    <string name="action_open_a_floating_window">Open a floating window</string>
    <string name="action_open_stream">Watch stream</string>
    <string name="action_room_info">Room info</string>
    <string name="action_back_to_latest">Back to latest</string>
    <string name="action_support_us">Support us</string>
    <string name="action_help">Help</string>
    <string name="sys_msg_connected_to_room"><![CDATA[
    <b>Connected to room:</b> %d
    ]]></string>
    <string name="sys_msg_disconnected"><![CDATA[
    Disconnected from stream room.
    ]]></string>
    <string name="toast_connect_room_before_opening_float"><![CDATA[
    Please connect a room before opening a floating window.
    ]]></string>
    <string name="chooser_title_choose_apps_to_watch_stream">Choose apps to watch stream</string>
    <string name="action_new_subscription">Subscribe streamer…</string>
    <string name="action_manage_subscription">Manage list</string>
    <string name="app_name_with_version_text_format">%s · Version %s (%d)</string>
    <string name="action_block_this_text">Block this text</string>
    <string name="action_block_this_user">Block this user</string>
    <string name="action_hide_this_danmaku">Hide this danmaku</string>
    <string name="no_streamer_selected_title">No streamer selected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected_with_popularity">Online. Popularity: %d</string>
    <string name="no_streamer_selected_dialog_title">No streamer selected</string>
    <string name="no_streamer_selected_dialog_message"><![CDATA[
    You have to subscribe a streamer to connect its room. Click right-top button or drag out left
    drawer to start add subscription.
    ]]></string>
    <string name="unsubscribe_dialog_title">Unsubscribe</string>
    <string name="unsubscribe_dialog_message"><![CDATA[
    Do you want to unsubscribe %s? This room will be removed from list but you
    can re-subscribe him/her later.
    ]]></string>
    <string name="new_subscription_title">New subscription</string>
    <string name="room_id_edit_hint">Enter Room ID here…</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="toast_invalid_room_id">Invalid Room ID. Please input a positive number.</string>
    <string name="action_search_room_id">Search room</string>
    <string name="search_room_id_no_result_dialog_title">No result</string>
    <string name="search_room_id_no_result_dialog_message"><![CDATA[
    Cannot find any streamer by this room id. Please check your input and try again.
    ]]></string>
    <string name="recommended_streamers_title">Recommended streamers</string>
    <string name="cannot_load_data_text">Cannot load data</string>
    <string name="subscribe_existing_streamer_dialog_title">Subscribed</string>
    <string name="subscribe_existing_streamer_dialog_message"><![CDATA[
    You have been subscribed streamer %s.
    ]]></string>
    <string name="confirm_subscribe_streamer_dialog_title">Subscribe streamer</string>
    <string name="room_id_text_format">Room ID: %d</string>
    <string name="noti_channel_status">Status notification</string>
    <string name="listener_service_label">Danmaku Background Service</string>
    <string name="listener_service_noti_title">Danmaqua is listening messages for you.</string>
    <string name="listener_service_noti_text_no_connected"><![CDATA[
    No room entered. Click here to open main page.
    ]]></string>
    <string name="listener_service_noti_text_connected">Connected room: %1$s(%2$d)</string>
    <string name="listener_service_noti_stop">Stop</string>
    <string name="room_info_title">Room Info</string>
    <string name="room_info_loading_text">Getting info…</string>
    <string name="room_info_room_title">Room title</string>
    <string name="room_info_user_name_and_id">Streamer ID</string>
    <string name="room_info_room_id">Room ID</string>
    <string name="room_info_area">Area</string>
    <string name="room_info_live_status">Live status</string>
    <string name="room_info_copy_url">Copy Page URL</string>
    <string name="live_status_closed">Closed</string>
    <string name="live_status_active">Live</string>
    <string name="live_status_carousel">Carousel</string>
    <string name="overlay_permission_request_title">Overlay permission required</string>
    <string name="overlay_permission_request_message"><![CDATA[
    To show a floating window, overlay permission is required.
    Click "Allow" and follow the system guide to turn on permissions for this app.
    ]]></string>
    <string name="action_allow">Allow</string>
    <string name="action_deny">Deny</string>
    <string name="ask_show_floating_title">Show floating window</string>
    <string name="ask_show_floating_message"><![CDATA[
    Floating window will help you read filtered (such as translation) danmaku easily. You should
    enable filter and set up rules first.\n\nChoose an action to do after showing floating window.
    ]]></string>
    <string name="action_stay_here">Stay here</string>
    <string name="action_minimize">Minimize</string>
    <string name="toast_floating_is_showing">Floating window is showing.</string>
    <string name="no_connections_available_title">No connections available</string>
    <string name="no_connections_available_message"><![CDATA[
    We detect that your phone hasn\'t connected to any network. It may not be able to accessing
    Bilibili live API. If you are sure you have connected to Internet, click ignore button to skip
    this check.
    ]]></string>
    <string name="action_ignore">Ignore</string>
    <string name="action_open_settings">Open settings</string>
    <string name="settings_title">Settings</string>
    <string name="filter_settings_title">Filter</string>
    <string name="filter_settings_summary"><![CDATA[
    Show filtered danmaku only, filter pattern, test pattern, blocked users and text.
    ]]></string>
    <string name="filter_settings_enabled_title">Show filtered danmaku only</string>
    <string name="filter_settings_enabled_summary">Help you to read translation easily</string>
    <string name="filter_settings_pattern_title">Filter Pattern</string>
    <string name="filter_settings_pattern_summary_format"><![CDATA[
    Translation/subtitle danmaku will be filtered with this pattern: %s
    ]]></string>
    <string name="filter_settings_blocked_users_title">Blocked users</string>
    <string name="filter_settings_blocked_users_summary_format"><![CDATA[
    Danmaku sent by blocked users will not be displayed whether filter is on or off.
    \nBlocked users count: %d
    ]]></string>
    <string name="filter_settings_blocked_text_title">Blocked text</string>
    <string name="filter_settings_blocked_text_summary_format"><![CDATA[
    Danmaku included blocked text will not be displayed whether filter is on or off.
    \nRules count: %d
    ]]></string>
    <string name="filter_settings_invalid_pattern_title">Invalid Pattern</string>
    <string name="filter_settings_test_pattern_title">Test pattern</string>
    <string name="filter_settings_test_pattern_summary"><![CDATA[
    Test if pattern will be able to filter translation/subtitle danmaku
    ]]></string>
    <string name="test_pattern_dialog_regexp">Regular expression (Pattern)</string>
    <string name="test_pattern_dialog_sample_text">Sample text</string>
    <string name="test_pattern_dialog_status">Match result</string>
    <string name="test_pattern_dialog_status_no_matches">No matches</string>
    <string name="floating_settings_title">Floating window</string>
    <string name="floating_settings_summary"><![CDATA[
    Two-line mode, simplify move gesture, background transparency, text size
    ]]></string>
    <string name="floating_two_line_title">Two-line mode</string>
    <string name="floating_two_line_summary">Show two-line subtitles instead</string>
    <string name="floating_background_alpha_title">Background transparency</string>
    <string name="floating_background_alpha_summary"><![CDATA[
    Range: 100–255. The maximum value means opaque.
    ]]></string>
    <string name="floating_text_size_title">Subtitle text size</string>
    <string name="floating_text_size_summary">Unit: sp</string>
    <string name="about_title">About</string>
    <string name="about_project_repo_title">GitHub Repository</string>
    <string name="about_contact_author_title">Contact author</string>
    <string name="about_contact_author_summary">Find me on Weibo, Bilibili or E-mail</string>
    <string name="author_siubeng_name">Siubeng</string>
    <string name="author_siubeng_summary">Programming &amp; Design</string>
    <string name="about_author_weibo_title">Weibo profile</string>
    <string name="about_author_weibo_summary" translatable="false">\@烧饼Siubeng</string>
    <string name="about_author_bilibili_title">Bilibili profile</string>
    <string name="about_author_bilibili_summary" translatable="false">\@烧饼Siubeng</string>
    <string name="about_author_email_title">Send via e-mail</string>
    <string name="about_discussion_group_qq_title">Discussion group (QQ)</string>
    <string name="about_open_source_licenses_title">Open Source Licenses</string>
    <string name="about_open_source_licenses_summary"><![CDATA[
    This project is inseparable from open source community\'s support.
    ]]></string>
    <string name="about_road_map_title">Road map</string>
    <string name="about_road_map_summary">See what we want to do next</string>
    <string name="firebase_instance_id_title">Firebase Instance Id</string>
    <string name="firebase_instance_id_not_registered_yet">Not registered yet</string>
    <string name="enabled_analytics_settings_title">Firebase Analytics &amp; Crashlytics</string>
    <string name="enabled_analytics_settings_summary"><![CDATA[
    Help us to improve our product\'s experience better. It collects anonymous data such as
    in-app usage and crash logs only!
    ]]></string>
    <string name="restart_to_intro_title">Restart to Intro page</string>
    <string name="user_interface_title">User interface</string>
    <string name="user_interface_summary"><![CDATA[
    Dark mode
    ]]></string>
    <string name="intro_allow_collect_data"><![CDATA[
    3.Allow FloatingSubtitle to <b>collect and upload anonymous data</b>
    such as in-app usage and crash logs so that we can improve its experience better. (Optional)
    ]]></string>
    <string name="intro_allow_internet_access"><![CDATA[
    1.Allow <b>Internet permissions</b> for FloatingSubtitle to access Bilibili API.
    <b>(Required)</b>
    ]]></string>
    <string name="intro_allow_background_service"><![CDATA[
    2.Allow FloatingSubtitle to <b>run a background service</b> while user
    is watching live danmaku/subtitle. <b>(Required)</b>
    ]]></string>
    <string name="intro_start_button">Start</string>
    <string name="firebase_title">Firebase</string>
    <string name="proxy_b23_url_title">Handle b23.tv link and open bilibili</string>
    <string name="proxy_b23_url_summary"><![CDATA[
    If your Bilibili app cannot handle b23.tv link directly, we can help you to forward intents.
    ]]></string>
    <string name="proxy_live_share_title">Share Bilibili Live to open subtitle</string>
    <string name="proxy_live_share_summary"><![CDATA[
    You can share live link to FloatingSubtitle to launch quickly.
    ]]></string>
    <string name="pattern_rule_title">Pattern title</string>
    <string name="pattern_rule_description">Pattern description</string>
    <string name="pattern_rule_regex">Regular expression</string>
    <string name="pattern_rule_committer">Committer</string>
</resources>