<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="user_interface_settings"
        android:title="@string/user_interface_title"
        android:summary="@string/user_interface_summary"
        android:icon="@drawable/ic_palette_24_text_color_primary"/>

    <Preference
        android:key="floating_settings"
        android:title="@string/floating_settings_title"
        android:summary="@string/floating_settings_summary"
        android:icon="@drawable/ic_closed_caption_24_text_color_primary"/>

    <Preference
        android:key="filter_settings"
        android:title="@string/filter_settings_title"
        android:summary="@string/filter_settings_summary"
        android:icon="@drawable/ic_filter_list_24_text_color_primary"/>

    <androidx.preference.PreferenceCategory android:title="@string/about_title">

        <Preference
            android:key="about_project_repo"
            android:title="@string/about_project_repo_title"
            android:summary="@string/about_project_repo_url"
            android:icon="@drawable/ic_github_24_text_color_primary"/>

        <Preference
            android:key="about_contact_author"
            android:title="@string/about_contact_author_title"
            android:summary="@string/about_contact_author_summary"
            android:icon="@drawable/ic_email_24_text_color_primary"/>

        <Preference
            android:key="about_discussion_group_qq"
            android:title="@string/about_discussion_group_qq_title"
            android:summary="@string/about_discussion_group_qq_number"
            android:icon="@drawable/ic_qq_24_text_color_primary"/>

        <Preference
            android:key="about_licenses"
            android:title="@string/about_open_source_licenses_title"
            android:summary="@string/about_open_source_licenses_summary"
            android:icon="@drawable/ic_license_24_text_color_primary"/>

        <Preference
            android:key="about_road_map"
            android:title="@string/about_road_map_title"
            android:summary="@string/about_road_map_summary"
            android:icon="@drawable/ic_sprout_24_text_color_primary"/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>