<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.SwitchPreference
        android:key="filter_enabled"
        android:title="@string/filter_settings_enabled_title"
        android:summary="@string/filter_settings_enabled_summary"
        android:icon="@drawable/ic_filter_list_24_text_color_primary"/>

    <Preference
        android:key="filter_pattern"
        android:title="@string/filter_settings_pattern_title"
        android:summary="@string/filter_settings_pattern_summary_format"
        android:icon="@drawable/ic_find_in_page_24_text_color_primary"/>

    <Preference
        android:key="filter_test_pattern"
        android:title="@string/filter_settings_test_pattern_title"
        android:summary="@string/filter_settings_test_pattern_summary"
        android:icon="@drawable/ic_developer_mode_24_text_color_primary"/>

    <Preference
        android:key="filter_blocked_users"
        android:title="@string/filter_settings_blocked_users_title"
        android:summary="@string/filter_settings_blocked_users_summary_format"
        android:icon="@drawable/ic_block_user_24_text_color_primary"/>

    <Preference
        android:key="filter_blocked_text"
        android:title="@string/filter_settings_blocked_text_title"
        android:summary="@string/filter_settings_blocked_text_summary_format"
        android:icon="@drawable/ic_block_24_text_color_primary"/>

</androidx.preference.PreferenceScreen>