<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <moe.feng.danmaqua.ui.common.view.CircleImageView
            android:id="@+id/avatarView"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/avatar_placeholder_empty" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:text="@string/author_siubeng_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:text="@string/author_siubeng_summary"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/weiboButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:text="@string/about_author_weibo_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_author_weibo_summary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bilibiliButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:text="@string/about_author_bilibili_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_author_bilibili_summary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:focusable="true"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceListItem"
            android:text="@string/about_author_email_title"/>

        <TextView
            android:id="@+id/emailSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/about_author_email_summary"/>

    </LinearLayout>

</LinearLayout>